--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,73 @@
 /*      GENERAL STYLING */
 body{
-    margin-top: 0;
+    margin: 0;
     background-color: #eeeeee;
 }
-div.grid-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1.5fr;
-    grid-template-rows: 1fr 4fr 2fr 2fr;
-    grid-gap: 15px;
+.menu-icon, .search, .icons, nav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
-nav, .video-comments, .info, aside{
-    background-color: #ffffff;
+.menu-icon button, .icons button, .search button{
+    width: 40px;
+    height: 40px;
+    background: none;
+    border: none;
 }
-article{
-    box-shadow: 0px 0px 5px #d3c8c8;
+/* .menu-icon a{
+    width: 80px;
+    height: 24px;
+} */
+.menu-icon{
+    
 }
 nav{
-    grid-column: 1/4;
-    grid-row: 1/2;
+    width: 100%;
+    background-color: #ffffff;
+    justify-content: space-between;
 }
-/* nav img, input[type="image"]{
-    width: 20px;
-} */
-/* li.search{
-    margin: 0 auto;
-} */
-input[type="image"]{
-    background-color: rgb(248, 248, 248);
-    /* width: 20px; */
-}
-nav ul li{
-    display: inline-block;
+
+.grid-container{
+    margin: 10px 20px;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    /* grid-column-gap: 10px; */
 }
 main{
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 1/2;
+    grid-row: auto;
 }
-.video-comments{
-    grid-column: 1/3;
-    grid-row: 3/4;
-}
-.info{
-    grid-column: 1/3;
-    grid-row: 4/5;
-}
-/* .video-comments, .info{
-    margin: 0.5em 0;
-} */
-/* main, aside{
-    margin-top: 1.2em;
-} */
 aside{
-    grid-column: 3/4;
-    grid-row: 2/5;
+    background-color: #ffffff;
+    grid-column: 2/3;
+    grid-row: auto;
 }
+aside ul{
+    list-style: none;
+}
+aside li{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+#subscribe{
+    width: 100px;
+    cursor: pointer;
+}
+.video-review, .info{
+    background-color: #ffffff;
+    margin-top: 15px;
+    padding: 1px 15px;
+    box-shadow: 0px 0px 5px #d3c8c8;
+}
+.video-review div{
+    display: inline-block;
+    margin-bottom: 100px;
+    padding-right: 5px;
+    line-height: 1px;
+}
+
+
+
+
+
+
