--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,88 @@
-/*      GENERAL STYLING */
 body{
     margin: 0;
     background-color: #eeeeee;
 }
-.menu-icon, .search, .icons, nav{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.menu-icon button, .icons button, .search button{
-    width: 40px;
-    height: 40px;
-    background: none;
-    border: none;
-}
-/* .menu-icon a{
-    width: 80px;
-    height: 24px;
-} */
-.menu-icon{
-    
-}
+/* NAVIGATION BAR */
 nav{
-    width: 100%;
     background-color: #ffffff;
+    display: flex;
+    align-content: center;
     justify-content: space-between;
 }
+.menu-icon, .search, .icons{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.menu-icon{
+    margin-left: 20px;
+}
+.menu-icon div{
+    margin: 10px 15px;
+}
+.icons div{
+    margin: 10px 20px;
+}
+nav i{
+    color: #606060;
+}
+.search > input, .search > button{
+    width: 500px; 
+    height: 30px; 
+    border-radius: 3px 0px 0px 3px; 
+    border: 1px solid #cccccc;
+}
+.search > button{
+    width: 60px; 
+    border-radius: 0px 3px 3px 0px; 
+    background-color: #f8f8f8;
+}
+/* END OF NAVIGATION BAR */
 
-.grid-container{
+/* MAIN SECTION */
+/* .iframe{
+    width: 100%;
+    height: 400px;
+} */
+/* .grid-container{
     margin: 10px 20px;
     display: grid;
     grid-template-columns: 1.5fr 1fr;
-    /* grid-column-gap: 10px; */
-}
-main{
+    grid-column-gap: 10px;
+} */
+/* main{
     grid-column: 1/2;
     grid-row: auto;
-}
-aside{
+} */
+/* aside{
     background-color: #ffffff;
     grid-column: 2/3;
     grid-row: auto;
-}
-aside ul{
+} */
+/* aside ul{
     list-style: none;
-}
-aside li{
+} */
+/* aside li{
     display: grid;
     grid-template-columns: 1fr 1fr;
-}
-#subscribe{
+} */
+/* #subscribe{
     width: 100px;
     cursor: pointer;
-}
-.video-review, .info{
+} */
+/* .video-review, .info{
     background-color: #ffffff;
     margin-top: 15px;
     padding: 1px 15px;
     box-shadow: 0px 0px 5px #d3c8c8;
-}
-.video-review div{
+} */
+/* .video-review div{
     display: inline-block;
     margin-bottom: 100px;
     padding-right: 5px;
     line-height: 1px;
-}
+} */
 
 
 
